# my_SPHinXsys

./: .gitignore  CHANGELOG.md  CLAUDE.md  run_simulation.bat  索引.md  索引_compact.md
cmake/SimbodyStub/: SimbodyConfig.cmake
src/for_3D_build/meshes/sparse_storage_mesh/: mesh_with_data_packages.hpp
src/shared/meshes/sparse_storage_mesh/: mesh_with_data_packages.hxx
tests/2d_examples/test_2d_airfoil/: CMakeLists.txt  airfoil_2d.cpp  visualize.m
tests/2d_examples/test_2d_channel_flow_fluid_shell/: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dt_dt比值恒定机制分析.md  README.md  SPH压力密度松弛算法详解_v2.md  SPH时间步计算机制完整解析_最终版.md  TEST_RESULTS.md  UmaxFromU0.fig  Verlet时间积分与密度更新详解.md  Verlet时间积分方案图示.md  analyze_acceleration_effect.m  analyze_dt_formula.m  analyze_timesteps.m  build.bat  plot_dependence.m  process_velocity_data.m  test_optimization.m  umax.mat  verify_gtest.m  visualize_velocity_field.m  技术文档索引_v2.6.md  索引.md
tests/2d_examples/test_2d_channel_flow_fluid_shell/output/: Wall_0000000000.vtp  WaterBody_0000502779.vtp  WaterBody_0001518303.vtp  WaterBody_0002023994.vtp  WaterBody_0002528373.vtp  WaterBody_0003031536.vtp  WaterBody_0003533601.vtp  (+2 more)
tests/2d_examples/test_2d_flow_around_cylinder/: 2d_flow_around_cylinder.cpp
tests/3d_examples/test_3d_FVM_incompressible_channel_flow/: ANIMATION_SUMMARY.md  CHANGELOG.md  VISUALIZATION_FIX_SUMMARY.md  build.bat  flow_data.mat  preprocess_data.m  preprocess_data_fvm.m  test_3d_FVM_incompressible_channel_flow.cpp  visualize_flow.m
tests/3d_examples/test_3d_channel_flow/: ANALYSIS_REPORT.md  CHANGELOG.md  CLAUDE.MD  CMakeLists.txt  README.md  SPHinXsys_Workflow_Cookbook.md  TASK_COMPLETION_REPORT.md  TODO_3d_channel_flow.md  build.bat  centerline_metrics.mat  centerline_metrics.txt  changelog规范.md  code_workflow.md  coding_workflow.md  compare_umax_2d_vs_3d.m  mixed_direction_metrics.mat  mixed_direction_metrics.txt  preprocess_data.m  run_metrics.mat  run_metrics.txt  technical_report.md  technical_report_brief.md  technical_report_revised.md  test_3d_channel_flow.cpp  visualize_flow.m  索引.md  项目Case构建指南.md  项目规划文档.md
tests/3d_examples/test_3d_channel_flow/2d_example/: 10-15工作记录_完全验证版.md  channel_flow_shell.cpp
tests/3d_examples/test_3d_channel_flow/output/: timing_summary.txt  umax_comparison.mat
tests/3d_examples/test_3d_channel_flow/output_backup_20251022_140728/: timing_summary.txt  umax_comparison.mat
tests/3d_examples/test_3d_channel_flow/output_forward_20251022_123838/: timing_summary.txt  umax_comparison.mat
tests/3d_examples/test_3d_channel_flow/output_forward_20251022_131445/: timing_summary.txt
tests/3d_examples/test_3d_poiseuille_flow_shell/: CMakeLists.txt  README.md  build.bat  poiseuille_flow_shell.cpp  preprocess_data.m  visualize_flow.m  索引.md
(+72 files in other folders)
